--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,8 @@ ul.list-check li::before {
   color: #2c3e50;
   position: relative;
 }
-.section-title::after {
+
+.section-title::after, .subsection-title::after {
   content: "";
   background: url(../../assets/images/section-divider.png) no-repeat 0 0;
   height: 15px;
@@ -207,6 +208,10 @@ ul.list-check li::before {
   bottom: -40px;
   margin: 0 auto;
 }
+.spaced{
+  margin-top: 70px;
+}
+
 
 #home {
   background: url(../images/home.jpg) no-repeat left bottom;
@@ -884,7 +889,8 @@ ul.list-check li::before {
   -o-transition: width 2s ease-in-out;
   transition: width 2s ease-in-out;
 }
-.skill-chart h3 {
+
+.skill-text h3 {
   margin-top: 20px;
 }
 .our-progress {
@@ -901,23 +907,24 @@ ul.list-check li::before {
 .chart {
   position: relative;
   display: inline-block;
-  width: 140px;
-  height: 140px;
+  width: 100%;
+  height: 120px;
   margin: 40px auto;
   text-align: center;
 }
 .chart canvas {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translate(-50%);
 }
 .percent {
   display: inline-block;
   margin: auto;
-  line-height: 140px;
+  line-height: 90px;
   z-index: 2;
-  font-size: 25px;
-  font-weight: 500;
+  font-size: 19px;
+  font-weight: 400;
   text-align: center;
 }
 .percent:after {
@@ -929,6 +936,21 @@ ul.list-check li::before {
   text-transform: capitalize;
   display: block;
   margin-top: 20px;
+}
+.list-text span {
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+  display: block;
+  margin-top: 5px;
+  padding: 10px;
+}
+.skill-icon {
+  width: 60px;
+  height: 60px;
+  vertical-align: middle;
+  /* Filtro para cambiar un icono NEGRO a #68C3A3 */
+  filter: invert(57%) sepia(10%) saturate(1615%) hue-rotate(106deg) brightness(84%) contrast(85%);
 }
 .angular {
   margin-top: 100px;
@@ -2056,4 +2078,16 @@ a.bbutton:hover {
     color: #fa0103;
     clip: rect(40px, 0px, 40px, 0px);
   }
+}
+.modal {
+  position: fixed;
+  top: 0;
+  right: 5px !important;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  display: none;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
 }
