--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1666,6 +1666,22 @@ li.media {
   border-style: none;
   border-bottom-style: solid;
 }
+li.media.lista {
+  border-style: none;
+  box-shadow: 6px 22px 31px -2px rgba(0,0,0,0.3);
+  height: 86px;
+  border-radius: 4px;
+}
+li.media.lista img{
+ width: 99px;
+ height: auto;
+ border: 12px solid #52b3d9;
+}
+@media screen and (min-width: 992px){
+  li.media.lista .media-body{
+line-height: 86px;
+}
+}
 
 .about {
   background: url(../images/about.png) no-repeat 100% 0 scroll #000;
