--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1672,23 +1672,51 @@ li.media {
   border-style: none;
   border-bottom-style: solid;
 }
+/** Lista titulos **/
 li.media.lista {
   border-style: none;
   box-shadow: 6px 22px 31px -2px rgba(0,0,0,0.3);
   height: 86px;
   border-radius: 4px;
 }
-li.media.lista img{
+li.media.lista img.lista{
  width: 99px;
  height: auto;
  border: 12px solid #52b3d9;
 }
+        /* Falso lightbox */
+        .lightbox-checkbox {
+            display: none;
+        }
+        .lightbox-trigger {
+            display: inline-block;
+        }
+        .lightbox-overlay {
+            display: none;
+            position: fixed;
+            inset: 0;
+            background: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+            cursor: pointer;
+        }
+        .lightbox-overlay img {
+            width: auto;
+            max-width: 100vw;
+            height: 90vh;
+            object-fit: contain;
+        }
+        .lightbox-checkbox:checked~.lightbox-overlay {
+            display: flex;
+        }
 @media screen and (min-width: 992px){
   li.media.lista .media-body{
 line-height: 86px;
 }
 }
 
+/** **/
 .about {
   background: url(../images/about.png) no-repeat 100% 0 scroll #000;
   background-size: contain;
