--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -428,7 +428,6 @@ ul.list-check li::before {
 }
 .navbar-custom .nav li.active,
 .navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus,
 .navbar-custom .navbar-nav > li.active > a {
   background: none;
   outline: 0;
@@ -439,12 +438,15 @@ ul.list-check li::before {
   font-size: 18px;
 }
 .navbar-custom .nav .open > a,
-.navbar-custom .dropdown-menu > li > a:hover,
-.navbar-custom .dropdown-menu > li > a:focus {
+.navbar-custom .dropdown-menu > li > a:hover
+{
   background: #f5f5f5;
 }
 .navbar-custom .navbar-toggle .icon-bar {
   background: #222;
+}
+.navbar-custom .navbar-nav > li > a:focus{
+  background-color: transparent;
 }
 .short-info {
   margin-bottom: 10px;
@@ -1792,7 +1794,7 @@ a.bbutton:hover {
   min-height: 50px;
   align-items: center;
   margin-bottom:20px;
-  display: none; 
+  display: flex; 
   justify-content: center; 
   gap: 30px;
   flex-wrap: wrap;
